<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_back_warnings"
        android:text="@string/back"
        android:layout_gravity="right|top"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning_history"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:layout_gravity="center"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                app:layout_constraintEnd_toStartOf="@id/date"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                app:layout_constraintEnd_toStartOf="@id/choosen_help"
                app:layout_constraintStart_toEndOf="@id/level"
                />

            <TextView
                android:id="@+id/choosen_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chosen_Help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/date"/>
        </android.support.constraint.ConstraintLayout>


        <android.support.v7.widget.RecyclerView
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/recycle_warnings">

        </android.support.v7.widget.RecyclerView>






</LinearLayout>