<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_details"
            android:textSize="35sp"
            android:gravity="center"
            android:padding="50dp" />

        <EditText
            android:id="@+id/txt_nei_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"

            />

        <EditText
            android:id="@+id/txt_nei_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_Number" />
        <Button
            android:id="@+id/btn_ok_add_nieghbour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_register_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_add_neighbors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ADD" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>