<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/xml_warning_info">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >
        <TextView
            android:id="@+id/chosen_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chosen_Help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/date"
            android:textSize="15sp"
            android:textColor="@color/black"

            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_level"
            app:layout_constraintStart_toEndOf="@id/chosen_help"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txt_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date"
            android:textColor="@color/black"

            />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>